sample-service.yml
# docker run -p 80:80 kennethreitz/httpbin

# https://kubernetes.io/docs/tasks/debug/debug-application/debug-service/
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  selector:
    matchLabels:
      run: httpbin
  replicas: 2
  template:
    metadata:
      labels:
        run: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    run: httpbin
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  externalTrafficPolicy: Local
  selector:
    run: httpbin

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-ns-ingress-egress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        # allow same ns pod and service traffic
        - podSelector: {}
  egress:
    - to:
        # allow same ns pod and service traffic
        - podSelector: {}
    - to:
        # allow kube dns lookups
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-master-ip-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            # allowlist specific IP to query nodeport service
            cidr: 192.168.121.186/32

# from any pod in the namespace - curl httpbin:8080/get works
# from the master node, curl workerx:30080/get works
# from any other worker node, curl fails to workerx:30080/get
